examples/test/testpolicy16491.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16491
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key38: value17
      key22: value21
      key11: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value5
          key2: value30
      podSelector:
        matchLabels:
          key9: value0
